--- a/index.html
+++ b/index.html
@@ -187,19 +187,27 @@
 
         </div>
 
-        <footer class="row d-flex justify-content-center">
-            <div class="col-3 location">
+        <footer class="row d-flex justify-content-center bg-dark text-white p-5">
+            <div class="col-3 location text-center">
                 <h3 class="text-uppercase">location</h3>
                 <p>2215 John Daniel Drive Clark, MO 5423</p>
             </div>
 
-            <div class="col-3 around-the-web">
+            <div class="col-3 around-the-web text-center">
                 <h3 class="text-uppercase">around the web</h3>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-google-plus-g"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
             </div>
 
-            <div class="col-3 about-freelancer">
+            <div class="col-3 about-freelancer text-center">
                 <h3 class="text-uppercase">about freelancer</h3>
                 <p>Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap</p>
+            </div>
+
+            <div class="copyright mt-3 text-center">
+                <p>Copyright © Your Website</p>
             </div>
         </footer>
 
